--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World, from Me2!
+<!DOCTYPE html>
+<html> 
+<head> 
+	<title>Главная</title> 
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
+</head> 
+<body>
+	<ul id="nav">
+      <li><a class="current" href="index.html">Главная</a></li>
+      <li><a href="author.html">Об авторе</a></li>
+      <li><a href="head.html">О руководителе</a></li>
+      <li><a href="theory.html">Теоретическая часть</a></li>
+      <li><a href="practice.html">Практическая часть</a></li>
+      <li><a href="sources.html">Список источников</a></li>
+   	</ul>
+	<div id='content'>
+		<h1>
+			О проекте
+		</h1>
+		<p>
+			В современном мире популярность телевидения стремительно сокращается. Многие телевизионные компании создают приложения добавляющие новые возможности для своих каналов, чтобы сохранить аудиторию. Таким образом, стоит признать, что будущее телеиндустрии – в портативной, легкой и функциональной технике – планшетах, электронных книжках, нетбуках и смартфонах.
+		</p>
+		<p>
+			Самыми популярными передачами на телевидении всегда были новости и спорт – каналы именно этих направлений первыми начали осваивать мобильные платформы, разрабатывая под них спутники-приложения, которые стали не только дублировать функционал обычных телеприемников, но и значительно его расширять. В данном случае система была адаптирована под группу спортивных телеканалов. В качестве дополнительных функций к просмотру телеэфира будет добавлена возможность смотреть комментарии к матчу, повторы интересных моментов, дополнительные интервью, статистика, таблицы результатов и даже возможность выбора камеры с которой идет трансляция, приостановка прямого эфира.
+		</p>
+		<p>
+			Целью дипломного проекта является создание мобильного приложения-спутника для группы телеканалов, которое должно отвечать всем стандартам качества, повторять функционал вебсайта, а также расширять его. Проект обязан выдерживать нагрузки в миллион пользователей в месяц и при этом стабильно хорошо функционировать. Необходимо предусмотреть масштабируемость.
+		</p>
+	</div>
+</body>
+</html>
