--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html> 
 <head> 
-	<title>Главная СТРАНИЦА</title> 
+	<title>Главная</title> 
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen">
 </head> 
 <body>
 	<ul id="nav">
-      <li><a class="current" href="index.html">Главная</a></li>
+      <li><a class="current" href="index.html">Главная СТРАНИЦА</a></li>
       <li><a href="author.html">Об авторе</a></li>
       <li><a href="head.html">О руководителе</a></li>
       <li><a href="theory.html">Теоретическая часть</a></li>
